[package]
name = "litevfs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
bytesize = "1.2"
caches = "0.2"
env_logger = "0.10"
fs2 = "0.4"
hex = "0.4"
log = "0.4"
ltx = { git = "ssh://git@github.com/superfly/ltx-rs.git", branch = "main" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
string-interner = "0.14"
sqlite-vfs = { path = "../sqlite-vfs", features = ["syscall", "loadext"] }
thiserror = "1.0"
ureq = { version = "2.7", features = ["json"] }
url = "2.4"

[dev-dependencies]
serde_test = "1.0"

[features]
linkable = ["sqlite-vfs/faultinj"]
